--- a/deploy.yaml
+++ b/deploy.yaml
@@ -25,7 +25,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: LoadBalancer
+  name: my-service
 spec:
   type: NodePort
   selector:
@@ -33,4 +33,5 @@ spec:
   ports:
     - port: 8081
       targetPort: 8081
+      nodePort: 30005
 ...
