--- a/deploy.yaml
+++ b/deploy.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: tomcat
-        image: avi087/jentom:latest
+        image: kunal2411/jentom:latest
         ports:
         - containerPort: 8081
 ...
